# neural-geometry-toolkit

./: .gitignore  CITATION.cff  LICENSE  README.md  README_RU.md  ng_lab.py  pyproject.toml  requirements.txt  streamlit_app.py
examples/: neural_geometry_quickstart.ipynb
nglab/: __init__.py  cli.py  core.py  datasets.py  geometry.py  plotting.py  steering.py
showcase/: README.md  README_RU.md  metrics_summary.csv
